<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/theme_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="vertical">

        <RelativeLayout
            tools:ignore="NestedWeights"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:paddingTop="26dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/fon"
                android:layout_width="200dp"
                android:layout_height="170dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/number_fon"
                android:contentDescription="@string/number_fon" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@+id/fon"
                android:layout_marginTop="30dp"
                android:text="@string/start_number"
                android:fontFamily="@font/road_numbers"
                android:textColor="@color/black"
                android:textSize="120sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/enter_the_code"
            android:textColor="?attr/main_text_color"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="12"
        android:orientation="vertical">

        <LinearLayout
            tools:ignore="NestedWeights"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_1"
                app:backgroundTint="?attr/numbersButtonColor"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="30sp"
                app:backgroundTint="?attr/numbersButtonColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backspace"
                app:icon="@drawable/ic_backspace"
                app:iconGravity="textStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                app:backgroundTint="?attr/numbersButtonColor"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>