<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fon_element_color">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name_ru"
        android:textColor="?attr/main_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/aboutApp_text_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tittle"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/information_app"
        android:textSize="14sp"
        android:textColor="@color/dark_grey"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_understand"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/aboutApp_text_information"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green_500"
        android:stateListAnimator="@null"
        android:text="@string/understand"
        android:textAllCaps="false" />


</RelativeLayout>