<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fon_element_color">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/theme"
        android:textColor="?attr/main_text_color"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radio_group_list_of_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tittle"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="12dp">

        <RadioButton
            android:id="@+id/radio_btn_light"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:paddingHorizontal="10dp"
            android:text="@string/settings_theme_light"
            android:textSize="14sp"
            android:textColor="?attr/main_text_color" />

        <RadioButton
            android:id="@+id/radio_btn_dark"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:paddingHorizontal="10dp"
            android:text="@string/settings_theme_dark"
            android:textSize="14sp"
            android:textColor="?attr/main_text_color"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_list_of_theme"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:backgroundTint="@color/green_500"
            android:text="@string/cancel1"
            android:textAllCaps="false" />
    </LinearLayout>

</RelativeLayout>