<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/theme_background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/theme_color"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/theme_color"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_arrow_back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginHorizontal="4dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/settings_app"
            android:textColor="?attr/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:id="@+id/themeStroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_settings"
            android:layout_margin="10dp"
            android:background="@drawable/fon_element"
            android:elevation="8dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/ic_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/ic_settings_theme"
                android:scaleType="centerInside"
                android:background="@drawable/fon_primary_500"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ic_theme"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/theme_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/theme"
                    android:textColor="?attr/main_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/theme_sub_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="14dp"
                    android:text="@string/settings_theme_light"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/text_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/themeStroke"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/app"
            android:textColor="?attr/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:id="@+id/aboutStroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/text_feedback"
            android:background="@drawable/fon_element"
            android:elevation="8dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/ic_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/ic_settings_about"
                android:scaleType="centerInside"
                android:background="@drawable/fon_primary_500"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ic_about"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/about"
                    android:textColor="?attr/main_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/about_sub_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="14dp"
                    android:text="@string/settings_about"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/estimateStroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/aboutStroke"
            android:background="@drawable/fon_element"
            android:elevation="8dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/ic_estimate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/ic_settings_estimate"
                android:scaleType="centerInside"
                android:background="@drawable/fon_primary_500"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ic_estimate"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/estimate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/estimate"
                    android:textColor="?attr/main_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/estimate_sub_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="14dp"
                    android:text="@string/settings_estimate"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/feedbackStroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/estimateStroke"
            android:background="@drawable/fon_element"
            android:elevation="8dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/ic_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/ic_settings_feedback"
                android:scaleType="centerInside"
                android:background="@drawable/fon_primary_500"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ic_feedback"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/feedback_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/feedback"
                    android:textColor="?attr/main_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/feedback_sub_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="14dp"
                    android:text="@string/settings_feedback"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:text="@string/version_app"
            android:textColor="?attr/main_text_color"
            android:textSize="12sp"/>

    </RelativeLayout>

</RelativeLayout>